# BaoW

./: 0530  0530.ipynb  0531.ipynb  053101.ipynb  053102.ipynb  0607test1.py  Filter函數  README.md  Untitled-1.ipynb  Untitled-2.ipynb  jei.ipynb  main.py  pyproject.toml
0516/: lesson1.py  lesson2.ipynb  lesson3.ipynb  main.py  pyproject.toml
0530/: lesson.ipynb
0600/: 111.py  main.py  pyproject.toml
0601/: 222.py  lesoon3.ipynb  main.py  pyproject.toml
0607/: 0607-2.py  0607-3.py  main.py  pyproject.toml
0613/: lesson1_1.ipynb  lesson3.ipynb  lesson3_1.ipynb  main.py  pyproject.toml
0617/: main.py  pyproject.toml
0718/: P1.ipynb  practice2.ipynb  practice3.ipynb  practice4-1.ipynb  practice4.ipynb  practice5.ipynb  pratice8.ipynb
