[project]
name = "baow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "reportlab>=4.5.1",
    "requests>=2.34.2",
]

[tool.uv.workspace]
members = [
    "0600",
    "0601",
    "0516",
    "0613",
]
